--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ExpensesActivity"
+            android:label="@string/title_activity_expenses"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".IncomeActivity"
             android:label="@string/title_activity_income"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
