--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.michalbaran.incomeapp">
 
     <application
-        android:name="com.michalbaran.incomeapp.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,9 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".WalletActivity"
+            android:label="@string/title_activity_wallet"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".ExpensesActivity"
             android:label="@string/title_activity_expenses"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".IncomeActivity"
             android:label="@string/title_activity_income"
